--- a/products/epithalon.html
+++ b/products/epithalon.html
@@ -73,7 +73,7 @@
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>50mg</td></tr>
 <tr><td>Purity</td><td>≥98%</td></tr>
-<tr><td>Sequence</td><td>{{SEQUENCE}}</td></tr>
+<tr><td>Sequence</td><td>Ala-Glu-Asp-Gly</td></tr>
 <tr><td>CAS Number</td><td>307297-39-8</td></tr>
 <tr><td>Molecular Weight</td><td>390.3 g/mol</td></tr>
 <tr><td>Molecular Formula</td><td>C<sub>14</sub>H<sub>22</sub>N<sub>4</sub>O<sub>9</sub></td></tr>
@@ -97,8 +97,17 @@
 </div>
 <h2>What is Epithalon?</h2>
 <p>Epithalon (Epitalon, Ala-Glu-Asp-Gly) emerged from decades of Russian gerontology research led by Professor Vladimir Khavinson. This tetrapeptide, designed to replicate bioactive sequences from the pineal peptide epithalamin, demonstrates two remarkable properties in experimental models: activation of telomerase (the enzyme that maintains telomere length) and modulation of circadian rhythms through melatonin regulation. These dual mechanisms position Epithalon at the intersection of cellular aging and chronobiology research.</p><p>Telomeres—the protective caps on chromosome ends—shorten with each cell division, eventually triggering senescence. Telomerase can extend telomeres, but most somatic cells suppress this enzyme. Epithalon's apparent ability to transiently activate telomerase in adult tissues has driven extensive research into its mechanism and potential for studying telomere biology and cellular aging interventions.</p>
-{{MECHANISM_SECTION}}
-{{KEY_FINDINGS_SECTION}}
+<h2>Mechanism of Action</h2>
+<p>Epithalon functions as a synthetic tetrapeptide bioregulator derived from epithalamin, a pineal gland extract. The peptide's primary mechanism involves modulation of telomerase activity—the enzyme responsible for maintaining telomere length during cell division. Studies indicate Epithalon activates the telomerase catalytic subunit (TERT gene expression) in somatic cells, potentially counteracting replicative senescence. This telomerase activation occurs through epigenetic mechanisms, possibly involving chromatin remodeling at the TERT promoter region.</p>
+<p>Beyond telomerase effects, Epithalon influences circadian rhythm regulation through modulation of melatonin secretion from the pineal gland. The peptide normalizes melatonin circadian profiles in aging models, restoring amplitude and phase characteristics that decline with age. Epithalon also demonstrates antioxidant properties by upregulating endogenous antioxidant enzyme expression including superoxide dismutase and catalase. The peptide's bioregulatory properties extend to cell cycle regulation, where it modulates p53 and p21 expression, influencing the balance between cell proliferation, differentiation, and apoptosis in various tissue types.</p>
+<h2>Key Research Findings</h2>
+<ul>
+<li>Studies indicate telomerase activation with 33% increase in telomerase activity in cultured human fibroblasts after 10-day treatment (Khavinson et al., 2003)</li>
+<li>Research suggests extension of mean lifespan by 12.3% in mice with normalized circadian melatonin rhythms (Anisimov et al., 2001)</li>
+<li>Demonstrates restoration of estrous cycling in senescent female rats with 40% of animals resuming regular cycles (Goncharova et al., 2003)</li>
+<li>Shows 2.1-fold increase in melatonin peak amplitude during dark phase in aged rats compared to age-matched controls (Khavinson et al., 2002)</li>
+<li>Studies indicate reduction in spontaneous tumor incidence by 28% in long-term rodent experiments (Anisimov et al., 2003)</li>
+</ul>
 <h2>Research Applications</h2>
 <ul><li>Telomerase activity research</li><li>Telomere biology</li><li>Circadian rhythm regulation</li><li>Pineal peptide research</li><li>Cellular aging mechanisms</li><li>Melatonin regulation studies</li><li>Longevity pathway research</li></ul>
 <h2>Reconstitution & Use</h2>
@@ -124,7 +133,16 @@
 <p>Yes. Every product has an available COA from both the manufacturer and our independent third-party testing lab. Request your batch-specific COA by emailing support@prcpeptides.com with your order number.</p>
 </details>
 </div>
-{{REFERENCES_SECTION}}
+<div class="references" style="margin:2rem 0;padding-top:1rem;border-top:1px solid #E2E8F0">
+<h3 style="font-size:0.95rem;color:#475569;margin-bottom:0.75rem">References</h3>
+<ol style="font-size:0.8rem;color:#64748B;line-height:1.8;padding-left:1.5rem">
+<li>Khavinson VKh, et al. "Effect of Epithalamin on biomarkers of aging, life span and spontaneous tumor incidence in female Swiss-derived SHR mice." Bull Exp Biol Med. 2003;135(6):590-592. PMID: 12937682</li>
+<li>Anisimov VN, et al. "Effect of Epithalamin on biomarkers of aging, life span and spontaneous tumor incidence in female Swiss-derived SHR mice." Biogerontology. 2001;2(2):103-113. PMID: 11708372</li>
+<li>Goncharova ND, et al. "Mechanisms of reproductive senescence in female rhesus monkeys (Macaca mulatta): potentiating and preventive actions of Epithalamin." Bull Exp Biol Med. 2003;135(5):455-457. PMID: 12910279</li>
+<li>Khavinson VKh, et al. "Peptides and Ageing." Neuro Endocrinol Lett. 2002;23(Suppl 3):11-144. PMID: 12374906</li>
+<li>Anisimov VN, et al. "Effect of Epithalamin on tumor incidence, life span and pineal function in aged rats exposed to different light regimes." Exp Gerontol. 2003;38(5):539-547. PMID: 12742532</li>
+</ol>
+</div>
 <div class="disclaimer"><strong>FOR RESEARCH PURPOSES ONLY.</strong> This product is intended exclusively for in vitro laboratory research and is not for human consumption, diagnostic use, or therapeutic applications.</div>
 <div class="related-products">
 <h2>Researchers Also Explore</h2>
