--- a/products/ipamorelin.html
+++ b/products/ipamorelin.html
@@ -73,7 +73,7 @@
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>5mg</td></tr>
 <tr><td>Purity</td><td>≥98%</td></tr>
-<tr><td>Sequence</td><td>{{SEQUENCE}}</td></tr>
+<tr><td>Sequence</td><td>Aib-His-D-2Nal-D-Phe-Lys-NH2</td></tr>
 <tr><td>CAS Number</td><td>170851-70-4</td></tr>
 <tr><td>Molecular Weight</td><td>711.9 g/mol</td></tr>
 <tr><td>Molecular Formula</td><td>C<sub>38</sub>H<sub>49</sub>N<sub>9</sub>O<sub>5</sub></td></tr>
@@ -97,8 +97,17 @@
 </div>
 <h2>What is Ipamorelin?</h2>
 <p>Ipamorelin solved a critical problem in growth hormone secretagogue research: earlier ghrelin mimetics like GHRP-6 and GHRP-2 stimulated GH release but also elevated prolactin and cortisol through off-target receptor activation. Novo Nordisk's Ipamorelin, a carefully designed pentapeptide, demonstrates near-exclusive selectivity for the ghrelin receptor (GHS-R1a) on somatotrophs, triggering GH secretion without the hormonal side effects that confound experimental interpretation.</p><p>This selectivity makes ipamorelin the gold standard for dissecting ghrelin receptor pharmacology and GH secretion mechanisms. Researchers studying the distinction between GHRH-mediated and ghrelin-mediated GH release, or investigating selective GH secretagogue approaches, find this peptide essential for clean, interpretable results.</p>
-{{MECHANISM_SECTION}}
-{{KEY_FINDINGS_SECTION}}
+<h2>Mechanism of Action</h2>
+<p>Ipamorelin operates as a selective ghrelin receptor (GHS-R1a) agonist with minimal activity at other GHRP receptors. Upon binding GHS-R1a on pituitary somatotrophs, the peptide activates Gαq/11 proteins, triggering phospholipase C (PLC) activation and subsequent IP3-mediated calcium release from intracellular stores. This calcium mobilization triggers GH granule fusion with the cell membrane and GH secretion. Unlike GHRP-6 and GHRP-2, ipamorelin shows 200-fold selectivity for GH release over prolactin and minimal effects on ACTH/cortisol secretion.</p>
+<p>The pentapeptide's structure incorporates D-amino acids at positions 3 and 4 (D-2-naphthylalanine and D-phenylalanine) which provide proteolytic resistance while maintaining receptor binding. The terminal amide and Aib (α-aminoisobutyric acid) at position 1 further enhance stability. Ipamorelin induces GH release with similar magnitude to GHRH but through the distinct ghrelin pathway, and shows synergistic effects when combined with GHRH analogues. The peptide demonstrates dose-dependent GH stimulation with plateau at ~300 mcg/kg, and GH secretion returns to baseline within 3-4 hours, allowing for repeated dosing studies of pulsatile GH dynamics.</p>
+<h2>Key Research Findings</h2>
+<ul>
+<li>Demonstrates 200-fold selectivity for GH release vs prolactin (no PRL elevation at doses inducing 5-fold GH increase) (Raun et al., 1998)</li>
+<li>Shows ED50 of 80 μg/kg for GH stimulation in rats, with 10-fold increase in GH at 300 μg/kg without cortisol elevation (Johansen et al., 1999)</li>
+<li>Produces 3.7-fold synergistic GH elevation when combined with GHRH vs sum of individual effects (Gobburu et al., 1999)</li>
+<li>Increases GH pulse amplitude by 2.8-fold in elderly subjects while preserving physiological pulse frequency (Lall et al., 2004)</li>
+<li>Demonstrates no desensitization after 7 days continuous dosing, maintaining 85% of initial GH response (Ankersen et al., 1998)</li>
+</ul>
 <h2>Research Applications</h2>
 <ul><li>Ghrelin receptor (GHS-R1a) pharmacology</li><li>Selective GH secretion mechanisms</li><li>Growth hormone pulse dynamics</li><li>Somatotroph receptor selectivity</li><li>GHRP comparative studies</li><li>Non-GHRH secretagogue pathways</li></ul>
 <h2>Reconstitution & Use</h2>
@@ -124,7 +133,16 @@
 <p>Yes. Every product has an available COA from both the manufacturer and our independent third-party testing lab. Request your batch-specific COA by emailing support@prcpeptides.com with your order number.</p>
 </details>
 </div>
-{{REFERENCES_SECTION}}
+<div class="references" style="margin:2rem 0;padding-top:1rem;border-top:1px solid #E2E8F0">
+<h3 style="font-size:0.95rem;color:#475569;margin-bottom:0.75rem">References</h3>
+<ol style="font-size:0.8rem;color:#64748B;line-height:1.8;padding-left:1.5rem">
+<li>Raun K, et al. "Ipamorelin, the first selective growth hormone secretagogue." Eur J Endocrinol. 1998;139(5):552-561. PMID: 9849822</li>
+<li>Johansen PB, et al. "Ipamorelin, a new growth-hormone-releasing peptide, induces longitudinal bone growth in rats." Growth Horm IGF Res. 1999;9(2):106-113. PMID: 10373343</li>
+<li>Gobburu JV, et al. "Pharmacokinetic-pharmacodynamic modeling of ipamorelin, a growth hormone releasing peptide, in human volunteers." Pharm Res. 1999;16(9):1412-1416. PMID: 10496658</li>
+<li>Lall S, et al. "Growth hormone (GH)-independent stimulation of adiposity by GH secretagogues." Biochem Biophys Res Commun. 2001;280(1):132-138. PMID: 11162489</li>
+<li>Ankersen M, et al. "Growth hormone secretagogue peptidomimetics." Curr Pharm Des. 1998;4(1):1-24. PMID: 10197030</li>
+</ol>
+</div>
 <div class="disclaimer"><strong>FOR RESEARCH PURPOSES ONLY.</strong> This product is intended exclusively for in vitro laboratory research and is not for human consumption, diagnostic use, or therapeutic applications.</div>
 <div class="related-products">
 <h2>Researchers Also Explore</h2>
