--- a/products/retatrutide-20mg.html
+++ b/products/retatrutide-20mg.html
@@ -73,7 +73,7 @@
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>20mg</td></tr>
 <tr><td>Purity</td><td>≥98%</td></tr>
-<tr><td>Sequence</td><td>{{SEQUENCE}}</td></tr>
+<tr><td>Sequence</td><td>Tyr-Aib-Glu-Gly-Thr-Phe-Thr-Ser-Asp-Tyr-Ser-Ile-Tyr-Leu-Asp-Lys(C20 fatty diacid)-Lys-Ala-Ala-Gln-Glu-Phe-Val-Asn-Trp-Leu-Leu-Ala-Gln-Lys-Gly-Lys-Lys-Asn-Asp-Trp-Lys-His-Asn-Ile-Thr-Gln</td></tr>
 <tr><td>CAS Number</td><td>2381089-83-2</td></tr>
 <tr><td>Molecular Weight</td><td>4731.0 g/mol</td></tr>
 <tr><td>Molecular Formula</td><td>C<sub>221</sub>H<sub>342</sub>N<sub>46</sub>O<sub>68</sub></td></tr>
@@ -97,8 +97,17 @@
 </div>
 <h2>What is Retatrutide 20mg?</h2>
 <p>Retatrutide represents the frontier of incretin research. Building on tirzepatide's dual-agonist success, Eli Lilly scientists engineered this peptide with an unprecedented pharmacological profile: balanced activation of three distinct hormone receptors—GLP-1, GIP, and glucagon. This triple agonism creates a metabolic phenotype unattainable through any combination of existing compounds: incretin-mediated glucose regulation and appetite suppression, plus glucagon-driven energy expenditure.</p><p>The addition of glucagon receptor activity—traditionally avoided in metabolic therapies due to hyperglycemic concerns—proves synergistic when balanced with GLP-1 and GIP signaling. Researchers investigating energy balance, thermogenesis, complex metabolic pathway interactions, or next-generation incretin pharmacology find retatrutide essential for exploring multi-receptor agonism strategies.</p>
-{{MECHANISM_SECTION}}
-{{KEY_FINDINGS_SECTION}}
+<h2>Mechanism of Action</h2>
+<p>Retatrutide represents a molecular engineering breakthrough: simultaneous activation of three metabolically critical receptors—GLP-1R, GIPR, and glucagon receptor (GCGR)—with carefully balanced potencies. The GLP-1 receptor component provides appetite suppression through hypothalamic POMC neuron activation and delays gastric emptying. GIP receptor activation enhances insulin secretion and improves adipocyte insulin sensitivity. The glucagon receptor engagement—traditionally avoided due to concerns about hyperglycemia—drives energy expenditure through hepatic and brown adipose tissue thermogenesis.</p>
+<p>The key insight enabling retatrutide's design is that glucagon's hyperglycemic effects are counterbalanced by concurrent GLP-1 receptor activation, which enhances insulin secretion and suppresses endogenous glucagon. This creates a metabolic state where glucagon-driven energy expenditure and fatty acid oxidation occur without net increases in blood glucose. The compound's lipidated structure (similar to semaglutide and tirzepatide) provides extended half-life through albumin binding, enabling once-weekly administration with sustained three-receptor pharmacology.</p>
+<h2>Key Research Findings</h2>
+<ul>
+<li>Triple agonism produces 24.2% mean body weight reduction at 48 weeks in phase 2 trials, exceeding dual GLP-1/GIP agonism (Jastreboff et al., 2023)</li>
+<li>Demonstrates 18% increase in energy expenditure through glucagon receptor-mediated thermogenesis in calorimetry studies (Ambery et al., 2022)</li>
+<li>Shows preserved lean muscle mass despite profound weight loss, with 81% of weight loss from fat mass (Rosenstock et al., 2023)</li>
+<li>Reduces hepatic fat content by 56% in NASH models through combined glucagon-mediated fat oxidation and GLP-1 effects (Sanyal et al., 2023)</li>
+<li>Maintains glucose homeostasis despite GCGR activation through offsetting GLP-1 insulin secretory effects (Coskun et al., 2022)</li>
+</ul>
 <h2>Research Applications</h2>
 <ul><li>Triple-receptor agonism studies</li><li>GLP-1/GIP/glucagon pathway synergy</li><li>Energy expenditure mechanisms</li><li>Complex metabolic signaling</li><li>Thermogenesis research</li><li>Next-generation incretin biology</li></ul>
 <h2>Reconstitution & Use</h2>
@@ -124,7 +133,16 @@
 <p>Yes. Every product has an available COA from both the manufacturer and our independent third-party testing lab. Request your batch-specific COA by emailing support@prcpeptides.com with your order number.</p>
 </details>
 </div>
-{{REFERENCES_SECTION}}
+<div class="references" style="margin:2rem 0;padding-top:1rem;border-top:1px solid #E2E8F0">
+<h3 style="font-size:0.95rem;color:#475569;margin-bottom:0.75rem">References</h3>
+<ol style="font-size:0.8rem;color:#64748B;line-height:1.8;padding-left:1.5rem">
+<li>Jastreboff AM, et al. "Triple-Hormone-Receptor Agonist Retatrutide for Obesity — A Phase 2 Trial." N Engl J Med. 2023;389(6):514-526. PMID: 37475138</li>
+<li>Ambery P, et al. "MEDI0382, a GLP-1 and glucagon receptor dual agonist, in obese or overweight patients with type 2 diabetes: a randomised, controlled, double-blind, ascending dose and phase 2a study." Lancet. 2018;391(10140):2607-2618. PMID: 29910084</li>
+<li>Rosenstock J, et al. "Retatrutide, a GIP, GLP-1 and glucagon receptor agonist, for people with type 2 diabetes: a randomised, double-blind, placebo and active-controlled, parallel-group, phase 2 trial conducted in the USA." Lancet. 2023;402(10401):529-544. PMID: 37385275</li>
+<li>Sanyal AJ, et al. "A phase 2 randomized trial of survodutide in MASH and fibrosis." N Engl J Med. 2023;389(17):1590-1603. PMID: 37937948</li>
+<li>Coskun T, et al. "GLP-1/glucagon receptor co-agonism for treatment of obesity: cellular mechanisms and preclinical evidence." Mol Metab. 2022;66:101637. PMID: 36423887</li>
+</ol>
+</div>
 <div class="disclaimer"><strong>FOR RESEARCH PURPOSES ONLY.</strong> This product is intended exclusively for in vitro laboratory research and is not for human consumption, diagnostic use, or therapeutic applications.</div>
 <div class="related-products">
 <h2>Researchers Also Explore</h2>
