--- a/products/nad-1000mg.html
+++ b/products/nad-1000mg.html
@@ -73,7 +73,7 @@
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>1000mg</td></tr>
 <tr><td>Purity</td><td>≥98%</td></tr>
-<tr><td>Sequence</td><td>{{SEQUENCE}}</td></tr>
+<tr><td>Chemical Structure</td><td>Nicotinamide adenine dinucleotide (not a peptide—dinucleotide coenzyme)</td></tr>
 <tr><td>CAS Number</td><td>53-84-9</td></tr>
 <tr><td>Molecular Weight</td><td>663.4 g/mol</td></tr>
 <tr><td>Molecular Formula</td><td>C<sub>21</sub>H<sub>27</sub>N<sub>7</sub>O<sub>14</sub>P<sub>2</sub></td></tr>
@@ -97,8 +97,17 @@
 </div>
 <h2>What is NAD+ 1000mg?</h2>
 <p>Nicotinamide adenine dinucleotide occupies a position of unparalleled importance in cellular biochemistry. This dinucleotide serves simultaneously as an electron carrier in redox reactions (the NAD+/NADH couple drives glycolysis, the TCA cycle, and oxidative phosphorylation), a substrate for sirtuins (deacetylases that regulate metabolism and longevity pathways), a substrate for PARPs (DNA repair enzymes), and a precursor for calcium signaling molecules. Without adequate NAD+, cellular energy production, gene expression regulation, and DNA maintenance all collapse.</p><p>NAD+ levels decline with age across tissues, correlating with metabolic dysfunction and cellular senescence—a relationship that has positioned NAD+ at the center of aging research. Studies investigating sirtuins, researching cellular energy metabolism, exploring DNA repair mechanisms, or modeling age-related NAD+ decline require direct NAD+ administration or measurement.</p>
-{{MECHANISM_SECTION}}
-{{KEY_FINDINGS_SECTION}}
+<h2>Mechanism of Action</h2>
+<p>NAD+ functions as an essential coenzyme in cellular metabolism, serving as an electron carrier in redox reactions throughout oxidative phosphorylation and glycolysis. The molecule acts as a substrate for sirtuins (SIRT1-7), a family of NAD+-dependent deacetylases that regulate gene expression, DNA repair, and metabolic homeostasis. NAD+ is also consumed by poly(ADP-ribose) polymerases (PARPs) during DNA damage response and by CD38, a major NAD+ glycohydrolase that increases with age and inflammation.</p>
+<p>Cellular NAD+ levels decline with age due to increased consumption by CD38 and PARPs, combined with decreased biosynthesis. This depletion impairs mitochondrial function, reduces sirtuin activity, and compromises cellular energy metabolism. Supplementation aims to restore NAD+ pools, potentially supporting mitochondrial biogenesis through SIRT1-mediated activation of PGC-1α, enhancing cellular energy production, and promoting DNA repair mechanisms. The salvage pathway, which recycles nicotinamide through NAMPT enzyme activity, represents the primary route of NAD+ biosynthesis in mammalian cells.</p>
+<h2>Key Research Findings</h2>
+<ul>
+<li>NAD+ levels decline by approximately 50% between ages 40-60 in multiple tissues including brain, muscle, and liver (Yoshino et al., 2018)</li>
+<li>Demonstrates restoration of mitochondrial function through SIRT1-dependent activation of mitochondrial biogenesis pathways in aging models (Gomes et al., 2013)</li>
+<li>Shows enhancement of DNA repair capacity through PARP-1 substrate availability in oxidative stress models (Fang et al., 2017)</li>
+<li>Increases endurance exercise capacity by 50% in aged mice through improved mitochondrial function (Zhang et al., 2016)</li>
+<li>Studies indicate improved vascular function through SIRT1-mediated eNOS activation in endothelial cells (Das et al., 2018)</li>
+</ul>
 <h2>Research Applications</h2>
 <ul><li>Redox biochemistry</li><li>Sirtuin activation research</li><li>Cellular energy metabolism</li><li>PARP enzyme function</li><li>Mitochondrial studies</li><li>NAD+/NADH ratio measurement</li><li>Cellular aging mechanisms</li><li>DNA repair pathways</li></ul>
 <h2>Reconstitution & Use</h2>
@@ -124,7 +133,16 @@
 <p>Yes. Every product has an available COA from both the manufacturer and our independent third-party testing lab. Request your batch-specific COA by emailing support@prcpeptides.com with your order number.</p>
 </details>
 </div>
-{{REFERENCES_SECTION}}
+<div class="references" style="margin:2rem 0;padding-top:1rem;border-top:1px solid #E2E8F0">
+<h3 style="font-size:0.95rem;color:#475569;margin-bottom:0.75rem">References</h3>
+<ol style="font-size:0.8rem;color:#64748B;line-height:1.8;padding-left:1.5rem">
+<li>Yoshino J, et al. "NAD+ Intermediates: The Biology and Therapeutic Potential of NMN and NR." Cell Metab. 2018;27(3):513-528. PMID: 29514064</li>
+<li>Gomes AP, et al. "Declining NAD+ induces a pseudohypoxic state disrupting nuclear-mitochondrial communication during aging." Cell. 2013;155(7):1624-1638. PMID: 24360282</li>
+<li>Fang EF, et al. "NAD+ Replenishment Improves Lifespan and Healthspan in Ataxia Telangiectasia Models via Mitophagy and DNA Repair." Cell Metab. 2016;24(4):566-581. PMID: 27732836</li>
+<li>Zhang H, et al. "NAD+ repletion improves mitochondrial and stem cell function and enhances life span in mice." Science. 2016;352(6292):1436-1443. PMID: 27127236</li>
+<li>Das A, et al. "Impairment of an Endothelial NAD+-H2S Signaling Network Is a Reversible Cause of Vascular Aging." Cell. 2018;173(1):74-89. PMID: 29570991</li>
+</ol>
+</div>
 <div class="disclaimer"><strong>FOR RESEARCH PURPOSES ONLY.</strong> This product is intended exclusively for in vitro laboratory research and is not for human consumption, diagnostic use, or therapeutic applications.</div>
 <div class="related-products">
 <h2>Researchers Also Explore</h2>
