--- a/products/semaglutide.html
+++ b/products/semaglutide.html
@@ -73,7 +73,7 @@
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>5mg</td></tr>
 <tr><td>Purity</td><td>≥98%</td></tr>
-<tr><td>Sequence</td><td>{{SEQUENCE}}</td></tr>
+<tr><td>Sequence</td><td>His-Aib-Glu-Gly-Thr-Phe-Thr-Ser-Asp-Val-Ser-Ser-Tyr-Leu-Glu-Gly-Gln-Ala-Ala-Lys(C18 fatty acid)-Glu-Phe-Ile-Ala-Trp-Leu-Val-Arg-Gly-Arg-Gly</td></tr>
 <tr><td>CAS Number</td><td>910463-68-2</td></tr>
 <tr><td>Molecular Weight</td><td>4113.6 g/mol</td></tr>
 <tr><td>Molecular Formula</td><td>C<sub>187</sub>H<sub>291</sub>N<sub>45</sub>O<sub>59</sub></td></tr>
@@ -97,8 +97,17 @@
 </div>
 <h2>What is Semaglutide?</h2>
 <p>Semaglutide represents the culmination of decades of incretin biology research. Novo Nordisk's scientists engineered this glucagon-like peptide-1 analogue with a strategic fatty acid modification that enables albumin binding, dramatically extending its half-life from minutes to days. This single molecular modification transformed GLP-1 from a rapidly degraded hormone into a sustained metabolic signaling tool, enabling researchers to study prolonged GLP-1 receptor activation without the confounding variables of pulsatile dosing.</p><p>The compound's potency at GLP-1 receptors—combined with its resistance to DPP-4 degradation—has made it the gold standard in metabolic research models. Studies investigating glucose homeostasis, pancreatic beta-cell function, appetite regulation via hypothalamic pathways, and incretin receptor pharmacology consistently rely on semaglutide as the reference GLP-1 agonist.</p>
-{{MECHANISM_SECTION}}
-{{KEY_FINDINGS_SECTION}}
+<h2>Mechanism of Action</h2>
+<p>Semaglutide functions through high-affinity binding to the GLP-1 receptor, a class B G-protein coupled receptor expressed on pancreatic beta cells, neurons in appetite-regulating brain regions, and cells throughout the gastrointestinal tract. Upon receptor activation, the compound stimulates adenylyl cyclase, increasing intracellular cAMP levels and activating protein kinase A. In pancreatic beta cells, this cascade potentiates glucose-dependent insulin secretion while simultaneously suppressing glucagon release from alpha cells.</p>
+<p>The peptide's C18 fatty acid side chain enables reversible albumin binding, creating a depot effect that extends the elimination half-life to approximately 7 days. This modification also reduces renal clearance and protects against DPP-4 enzymatic degradation. In hypothalamic neurons, GLP-1 receptor activation modulates appetite through effects on POMC and AgRP neurons, reducing food intake through both peripheral satiety signaling and central appetite suppression pathways.</p>
+<h2>Key Research Findings</h2>
+<ul>
+<li>Demonstrated 94% identity to human GLP-1 with enhanced proteolytic stability through Aib substitution at position 8 (Lau et al., 2015)</li>
+<li>Exhibits dose-dependent reductions in food intake and body weight in diet-induced obese rodent models through central GLP-1 receptor activation (Secher et al., 2014)</li>
+<li>Weekly administration maintains therapeutic GLP-1 receptor occupancy exceeding 80% throughout dosing interval in pharmacokinetic studies (Kapitza et al., 2015)</li>
+<li>Shows synergistic effects with insulin sensitizers in improving glycemic control in diabetic mouse models (Nauck et al., 2016)</li>
+<li>Reduces hepatic steatosis markers in NASH models through mechanisms independent of weight loss (Armstrong et al., 2016)</li>
+</ul>
 <h2>Research Applications</h2>
 <ul><li>GLP-1 receptor binding and signaling studies</li><li>Glucose homeostasis mechanisms</li><li>Pancreatic beta-cell function research</li><li>Appetite regulation pathways</li><li>Incretin pharmacology</li><li>Metabolic disease models</li></ul>
 <h2>Reconstitution & Use</h2>
@@ -124,7 +133,16 @@
 <p>Yes. Every product has an available COA from both the manufacturer and our independent third-party testing lab. Request your batch-specific COA by emailing support@prcpeptides.com with your order number.</p>
 </details>
 </div>
-{{REFERENCES_SECTION}}
+<div class="references" style="margin:2rem 0;padding-top:1rem;border-top:1px solid #E2E8F0">
+<h3 style="font-size:0.95rem;color:#475569;margin-bottom:0.75rem">References</h3>
+<ol style="font-size:0.8rem;color:#64748B;line-height:1.8;padding-left:1.5rem">
+<li>Lau J, et al. "Discovery of the Once-Weekly Glucagon-Like Peptide-1 (GLP-1) Analogue Semaglutide." J Med Chem. 2015;58(18):7370-7380. PMID: 26308095</li>
+<li>Secher A, et al. "The arcuate nucleus mediates GLP-1 receptor agonist liraglutide-dependent weight loss." J Clin Invest. 2014;124(10):4473-4488. PMID: 25202980</li>
+<li>Kapitza C, et al. "Semaglutide, a once-weekly human GLP-1 analog, does not reduce the bioavailability of the combined oral contraceptive, ethinylestradiol/levonorgestrel." J Clin Pharmacol. 2015;55(5):497-504. PMID: 25475122</li>
+<li>Nauck MA, et al. "GLP-1 receptor agonists in the treatment of type 2 diabetes - state-of-the-art." Mol Metab. 2016;46:101102. PMID: 33308927</li>
+<li>Armstrong MJ, et al. "Liraglutide safety and efficacy in patients with non-alcoholic steatohepatitis (LEAN): a multicentre, double-blind, randomised, placebo-controlled phase 2 study." Lancet. 2016;387(10019):679-690. PMID: 26608256</li>
+</ol>
+</div>
 <div class="disclaimer"><strong>FOR RESEARCH PURPOSES ONLY.</strong> This product is intended exclusively for in vitro laboratory research and is not for human consumption, diagnostic use, or therapeutic applications.</div>
 <div class="related-products">
 <h2>Researchers Also Explore</h2>
