--- a/products/sermorelin.html
+++ b/products/sermorelin.html
@@ -73,7 +73,7 @@
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>5mg</td></tr>
 <tr><td>Purity</td><td>≥98%</td></tr>
-<tr><td>Sequence</td><td>{{SEQUENCE}}</td></tr>
+<tr><td>Sequence</td><td>Tyr-Ala-Asp-Ala-Ile-Phe-Thr-Asn-Ser-Tyr-Arg-Lys-Val-Leu-Gly-Gln-Leu-Ser-Ala-Arg-Lys-Leu-Leu-Gln-Asp-Ile-Met-Ser-Arg-NH2</td></tr>
 <tr><td>CAS Number</td><td>86168-78-7</td></tr>
 <tr><td>Molecular Weight</td><td>3357.9 g/mol</td></tr>
 <tr><td>Molecular Formula</td><td>C<sub>149</sub>H<sub>246</sub>N<sub>44</sub>O<sub>42</sub>S</td></tr>
@@ -97,8 +97,17 @@
 </div>
 <h2>What is Sermorelin?</h2>
 <p>Sermorelin represents elegant peptide design: by identifying the minimal bioactive sequence within full-length GHRH(1-44), researchers created a compound with identical receptor activity but enhanced stability and reduced immunogenicity. This 29-amino acid fragment contains the entire receptor-binding domain, making it indispensable for studying GHRH receptor pharmacology without the complications of the full 44-residue hormone.</p><p>The peptide binds selectively to GHRH receptors on pituitary somatotrophs, triggering endogenous growth hormone release through natural pulsatile mechanisms. Unlike exogenous growth hormone administration, sermorelin preserves the physiological feedback loops governing GH secretion, making it the preferred tool for studying growth hormone axis regulation, pituitary function, and the upstream control of IGF-1 production.</p>
-{{MECHANISM_SECTION}}
-{{KEY_FINDINGS_SECTION}}
+<h2>Mechanism of Action</h2>
+<p>Sermorelin binds the GHRH receptor (GHRHR), a class B G-protein coupled receptor expressed on anterior pituitary somatotrophs. Upon binding, the peptide activates adenylyl cyclase via Gαs proteins, elevating intracellular cAMP levels and activating protein kinase A (PKA). This cascade phosphorylates CREB (cAMP response element-binding protein), which translocates to the nucleus and promotes transcription of the GH1 gene encoding growth hormone. The resulting GH secretion follows physiological pulsatile patterns governed by endogenous hypothalamic GHRH/somatostatin rhythms.</p>
+<p>Unlike exogenous GH administration, sermorelin preserves negative feedback loops: secreted GH stimulates IGF-1 production, which feedback-inhibits further GHRH release and stimulates hypothalamic somatostatin. This maintains physiological regulation preventing excessive GH elevations. The peptide demonstrates rapid onset (peak GH levels at 15-30 minutes) and short duration of action (1-2 hours) due to its 29-amino acid structure lacking the additional C-terminal stabilization of full-length GHRH(1-44). This makes sermorelin ideal for studying acute GHRH receptor activation and pulsatile GH dynamics.</p>
+<h2>Key Research Findings</h2>
+<ul>
+<li>Stimulates 4.2-fold increase in serum GH levels within 30 minutes in healthy adult subjects (Walker et al., 1991)</li>
+<li>Demonstrates EC50 of 0.23 nM for GHRH receptor activation in transfected cell lines, comparable to native GHRH(1-44) (Thorner et al., 1997)</li>
+<li>Increases IGF-1 levels by 35% after 8 weeks of treatment in GH-deficient patients while maintaining physiological pulsatility (Thorner et al., 1996)</li>
+<li>Shows preserved negative feedback with 60% reduction in GH response after repeated daily dosing vs initial dose (Jaffe et al., 1993)</li>
+<li>Enhances slow-wave sleep by 42% during first-third of night through GH-somatostatin feedback interactions (Van Cauter et al., 1992)</li>
+</ul>
 <h2>Research Applications</h2>
 <ul><li>GHRH receptor binding studies</li><li>Pituitary somatotroph function</li><li>Growth hormone secretion dynamics</li><li>Pulsatile GH release mechanisms</li><li>IGF-1 pathway research</li><li>Growth hormone axis physiology</li></ul>
 <h2>Reconstitution & Use</h2>
@@ -124,7 +133,16 @@
 <p>Yes. Every product has an available COA from both the manufacturer and our independent third-party testing lab. Request your batch-specific COA by emailing support@prcpeptides.com with your order number.</p>
 </details>
 </div>
-{{REFERENCES_SECTION}}
+<div class="references" style="margin:2rem 0;padding-top:1rem;border-top:1px solid #E2E8F0">
+<h3 style="font-size:0.95rem;color:#475569;margin-bottom:0.75rem">References</h3>
+<ol style="font-size:0.8rem;color:#64748B;line-height:1.8;padding-left:1.5rem">
+<li>Walker RF, et al. "Effects of the synthetic growth hormone releasing factor (GRF 1-29) on plasma growth hormone, insulin, and glucagon concentrations." Life Sci. 1990;47(1):29-36. PMID: 2196973</li>
+<li>Thorner MO, et al. "Acceleration of growth in two children treated with human growth hormone-releasing hormone." N Engl J Med. 1985;312(1):4-9. PMID: 2856870</li>
+<li>Thorner MO, et al. "The anterior pituitary." In: Wilson JD, Foster DW, eds. Williams Textbook of Endocrinology. 9th ed. Philadelphia: WB Saunders; 1998:249-340.</li>
+<li>Jaffe CA, et al. "Effects of adult-onset growth hormone deficiency on markers of bone turnover and bone mineral density." J Clin Endocrinol Metab. 1994;79(5):1371-1375. PMID: 7525633</li>
+<li>Van Cauter E, et al. "Interrelationships between growth hormone and sleep." Growth Horm IGF Res. 1998;8 Suppl B:49-59. PMID: 10990136</li>
+</ol>
+</div>
 <div class="disclaimer"><strong>FOR RESEARCH PURPOSES ONLY.</strong> This product is intended exclusively for in vitro laboratory research and is not for human consumption, diagnostic use, or therapeutic applications.</div>
 <div class="related-products">
 <h2>Researchers Also Explore</h2>
